# cpp_ex

./: .build_env.temp  .dist_build  .env_dist  .env_dist.temp  .gitignore  CHANGELOG.es.md  CHANGELOG.md  CMakeLists.txt  README.md  build.dist.sh  build.sh  build_test.sh  clean_build.sh  dockerfile.dist  helper.sh  main.cpp  modify_catch2.sh  run.sh  run_test.sh
memory-bank/: activeContext.md  git_commands.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: main.cpp
src/libs/core/: common.hpp  map.hpp  safe_shared_ptr.hpp  safe_unique_ptr.hpp  string.hpp  vector.hpp
tests/: CMakeLists.txt  integration_tests.cpp
tests/unit/: CMakeLists.txt  common_test.cpp  map_test.cpp  safe_shared_ptr_test.cpp  safe_unique_ptr_test.cpp  string_test.cpp  vector_test.cpp
